--- a/scss/partials/components/_projects.scss
+++ b/scss/partials/components/_projects.scss
@@ -6,6 +6,9 @@
     @include section-heading;
   }
 	.project {
+    & p {
+      display: inline-block;
+    }
     &:not(:last-of-type) { 
       margin-bottom: 3rem;
     }
